--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     width: 1440px;
     height: 677px;
     background:navy;
+    margin-bottom: 70px;
 }
 .first-left-width{
     width: 485px;
@@ -63,3 +64,5 @@ button, .link-button{
     margin-bottom: 86px;
     margin-left: 102px;
 }
+/* First Section */
+
