--- a/style.css
+++ b/style.css
@@ -5,9 +5,13 @@
 /* font */
 
 body{
-    width: 1440px;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+}
+
+main{
+    width: 1440px;
+    
 }
 
 /* First section */
@@ -133,3 +137,39 @@ button, .link-button{
     margin-bottom: 60px;
 }
 /* Fifth-Section */
+
+/*Sixth Section*/
+
+.sixth-section{
+ margin: 0;
+}
+.totall-width{
+    width: 493px;
+    height: 213px;
+    margin: 158px 482px 63px 475px;
+}
+.totall-width img{
+    width: 490px;
+    height: 110px;
+    margin-bottom: 20px;
+}
+.icon{
+    width: 170px;
+    height: 32px;
+    margin: 20px 162px 20px 162px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
+    font-size: 20px;
+}
+.copyright{
+    width: 236px;
+    height: 31px;
+    margin: 20px 134px 10px 125px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+/*Sixth Section*/
