--- a/style.css
+++ b/style.css
@@ -138,9 +138,88 @@ button, .link-button{
 }
 /* Fifth-Section */
 
-/*Sixth Section*/
+
+/* Sixth Section */
 
 .sixth-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 600px;
+    margin-bottom: 60px;
+    background-color: navy;
+
+}
+.video-box-width{
+
+   width: 1050px;
+   height: 474px;
+   display: flex;
+   justify-content: space-between;
+   margin-left: 180px;
+   margin-right: 210px;
+}
+.video-box{
+    width: 330px;
+    height: 500px;
+    margin-top: 20px;
+    box-shadow: 5px 5px 5px 2px gray; 
+}
+
+.video-width{
+
+    width: 300px;
+    height: 256px;
+    padding:15px;
+
+}
+.video-title{
+    color: white;
+    width: 330px;
+    height: 40px;
+    font-weight: bold;
+    size: 35px;
+    margin: 16px 15px 10px 15px;
+    padding: 10px 10px 10px 0px;
+}
+.video-info{
+    color: white;
+    font-weight: bold;
+    width: 300px;
+    height: 104px;
+    font-weight: 400;
+    size: 16px;
+    margin: 10px 15px 33px 15px;
+}
+
+
+
+
+
+/* Sixth Section */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Footer Section*/
+
+.footer-section{
  margin: 0;
 }
 .totall-width{
@@ -171,5 +250,4 @@ button, .link-button{
     font-weight: 400;
     font-size: 18px;
 }
-
-/*Sixth Section*/
+/*Footer Section*/
